@@ -2,6 +2,7 @@
   Originally written by Bruce A. Maxwell a long time ago.
   Updated by Brian Eastwood and Stephanie Taylor more recently
   Updated by Bruce again in Fall 2018
+  Updated by Roman Schiffino on the on September 26th.
 
   Creates a window using the JFrame class.
 
@@ -10,8 +11,14 @@
   The JPanel calls the Landscape's draw method to fill in content, so the
   Landscape class needs a draw method.
   
-  Students should not *need* to edit anything outside of the main method, 
-  but are free to do so if they wish. 
+  Students should not *need* to edit anything outside of the main method,
+  but are free to do so if they wish.
+
+  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+  Personally I just touched up a couple of things here and there and added some things.
+  Used thread builder as such Java JDK21 is necessary. Or --enable-preview necessary.
+  Thread is used for a better implementation of GUI and toggleable game states.
 */
 
 import java.awt.BorderLayout;
@@ -22,7 +29,6 @@ import java.awt.Graphics;
 import java.awt.image.BufferedImage;
 import java.io.File;
 import java.io.IOException;
-
 import javax.imageio.ImageIO;
 import javax.swing.*;
 
@@ -33,6 +39,8 @@ import javax.swing.*;
  * @author bseastwo
  */
 public class LandscapeDisplay {
+
+    //I may have made many a tweak.
     final JFrame win;
     protected final Landscape scape;
     private final LandscapePanel canvas;
@@ -63,6 +71,84 @@ public class LandscapeDisplay {
         this.win.pack();
         this.win.setVisible(true);
     }
+
+    /**
+     * Saves an image of the display contents to a file. The supplied
+     * filename should have an extension supported by javax.imageio, e.g.
+     * "png" or "jpg".
+     *
+     * @param filename the name of the file to save
+     */
+    public void saveImage(String filename) {
+        // get the file extension from the filename
+        String ext = filename.substring(filename.lastIndexOf('.') + 1, filename.length());
+
+        // create an image buffer to save this component
+        Component tosave = this.win.getRootPane();
+        BufferedImage image = new BufferedImage(tosave.getWidth(), tosave.getHeight(),
+                BufferedImage.TYPE_INT_RGB);
+
+        // paint the component to the image buffer
+        Graphics g = image.createGraphics();
+        tosave.paint(g);
+        g.dispose();
+
+        // save the image
+        try {
+            ImageIO.write(image, ext, new File(filename));
+        } catch (IOException ioe) {
+            System.out.println(ioe.getMessage());
+        }
+    }
+
+    /**
+     * This inner class provides the panel on which Landscape elements
+     * are drawn.
+     */
+    protected class LandscapePanel extends JPanel {
+        /**
+         * Creates the panel.
+         * 
+         * @param width  the width of the panel in pixels
+         * @param height the height of the panel in pixels
+         */
+        public LandscapePanel(int width, int height) {
+            super();
+            this.setPreferredSize(new Dimension(width, height));
+            this.setBackground(Color.lightGray);
+        }
+
+        /**
+         * Method overridden from JComponent that is responsible for
+         * drawing components on the screen. The supplied Graphics
+         * object is used to draw.
+         * 
+         * @param g the Graphics object used for drawing
+         */
+        public void paintComponent(Graphics g) {
+            // take care of housekeeping by calling parent paintComponent
+            super.paintComponent(g);
+
+            // call the Landscape draw method here
+            scape.draw(g, gridScale);
+        } // end paintComponent
+
+    } // end LandscapePanel
+
+    public void repaint() {
+        this.win.repaint();
+    }
+
+    public static void main(String[] args) {
+        Landscape scape = new Landscape(100, 100, 50);
+
+        LandscapeDisplay display = new LandscapeDisplay(scape, 6);
+
+    }
+
+    /*
+    Decided to separate what I made from scratch to make it clearer.
+     */
 
     /**
      * Creates and configures a menu bar for the graphical user interface.
@@ -141,82 +227,5 @@ public class LandscapeDisplay {
 
         // Set the menu bar for the JFrame
         win.setJMenuBar(menuBar);
-    }
-
-
-    /**
-     * Saves an image of the display contents to a file. The supplied
-     * filename should have an extension supported by javax.imageio, e.g.
-     * "png" or "jpg".
-     *
-     * @param filename the name of the file to save
-     */
-    public void saveImage(String filename) {
-        // get the file extension from the filename
-        String ext = filename.substring(filename.lastIndexOf('.') + 1, filename.length());
-
-        // create an image buffer to save this component
-        Component tosave = this.win.getRootPane();
-        BufferedImage image = new BufferedImage(tosave.getWidth(), tosave.getHeight(),
-                BufferedImage.TYPE_INT_RGB);
-
-        // paint the component to the image buffer
-        Graphics g = image.createGraphics();
-        tosave.paint(g);
-        g.dispose();
-
-        // save the image
-        try {
-            ImageIO.write(image, ext, new File(filename));
-        } catch (IOException ioe) {
-            System.out.println(ioe.getMessage());
-        }
-    }
-
-    /**
-     * This inner class provides the panel on which Landscape elements
-     * are drawn.
-     */
-    private class LandscapePanel extends JPanel {
-        /**
-         * Creates the panel.
-         * 
-         * @param width  the width of the panel in pixels
-         * @param height the height of the panel in pixels
-         */
-        public LandscapePanel(int width, int height) {
-            super();
-            this.setPreferredSize(new Dimension(width, height));
-            this.setBackground(Color.lightGray);
-        }
-
-        /**
-         * Method overridden from JComponent that is responsible for
-         * drawing components on the screen. The supplied Graphics
-         * object is used to draw.
-         * 
-         * @param g the Graphics object used for drawing
-         */
-        public void paintComponent(Graphics g) {
-            // take care of housekeeping by calling parent paintComponent
-            super.paintComponent(g);
-
-            // call the Landscape draw method here
-            scape.draw(g, gridScale);
-        } // end paintComponent
-
-    } // end LandscapePanel
-
-    public void repaint() {
-        this.win.repaint();
-    }
-
-
-
-    public static void main(String[] args) {
-        Landscape scape = new Landscape(100, 100, 50);
-
-        LandscapeDisplay display = new LandscapeDisplay(scape, 6);
-
     }
 }
